@@ -12,4 +12,4 @@ requires:
   Carp: 0
   MIME::Base64: 0
   Test::More: 0
-version: 0.03
+version: 0.04
