@@ -9,7 +9,7 @@ WriteMakefile(
   NAME      => 'Crypt::Blowfish::Mod',
   AUTHOR    => 'Rodrigo\ de\ Oliveira\ \<rodrigolive\@gmail\.com\>',
   ABSTRACT  => 'Yet\ another\ blowfish\ algorithm',
-  VERSION   => '0.03',
+  VERSION   => '0.04',
   EXE_FILES => [ qw() ],
   (eval { ExtUtils::MakeMaker->VERSION(6.31) } ? (LICENSE => 'perl') : ()),
   PREREQ_PM    => {
