@@ -1,7 +1,7 @@
 
 
 This archive contains the distribution Crypt-Blowfish-Mod, version
-0.03:
+0.04:
 
   Yet another blowfish algorithm
 
