@@ -1,5 +1,5 @@
 name    = Crypt-Blowfish-Mod
-version = 0.03
+version = 0.04
 abstract = Yet another blowfish algorithm
 license = Perl_5
 author  = Rodrigo de Oliveira <rodrigolive@gmail.com>
